# typed-numpy

./: README.md  USAGE.md  pyproject.toml
.github/workflows/: python-publish.yml
src/typed_numpy/: __init__.py  dimensions.py  helpers.py  ndarray.py  shapes.py
src/typed_numpy/_typed/: __init__.py  context.py  dimensions.py  generics.py  helpers.py  ndarray.py  shapes.py
tests/: test_ndarray.py  test_ndarray_2.py
